# Dall_1

./: .env.example  .gitignore  <!DOCTYPE html>.html  Dockerfile  MIGRATION_DISCOVERY.md  README.md  REDESIGN_SUMMARY.md  dall_platform_v5_AR.html  dall_platform_v5_fixed.html  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.local.json
agents/: __init__.py  config.py  middleware_stack.py  prompts.py  state.py  subagent_configs.py  supervisor.py
agents/backends/: __init__.py  postgres_store.py  redis_state.py  s3_filesystem.py
agents/middleware/: __init__.py  adaptive_difficulty.py  arabic_localization.py  clinical_safety.py  hallucination_guard.py  pii_protection.py
agents/skills/: __init__.py  explanation.py  hint_generation.py  question_selection.py
agents/subagents/: __init__.py
agents/tools/: __init__.py  exam_tools.py  (+4 more)
backend/: Dockerfile  __init__.py  main.py
dall-academy/: .env.example  .gitignore  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
data/: seed_questions.json  seed_textbooks.json
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
scripts/: add_logo_lang.py  clean_seed_json.py  extract_questions.py  fix_annual_price.py  fix_ar_mcq_english.py  fix_landing_pages.py  fix_landing_v2.py  fix_logo_bg.py  inspect_mcq.py  inspect_mcq2.py  inspect_mcq3.py  inspect_mcq4.py  integrate_landing_to_nextjs.py  seed_questions_to_db.py  show_nav.py  show_nav2.py  update_pricing.py  verify_final.py  verify_landing_pages.py
tests/: conftest.py  test_backend_services.py  test_config_and_state.py  test_middleware.py  test_tools.py
(+91 files in other folders)
