[project]
name = "dall-academy"
version = "0.1.0"
description = "AI-powered healthcare exam preparation platform — Deep Agents architecture"
requires-python = ">=3.11"
dependencies = [
    # --- Web Framework ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    # --- Deep Agents / LangGraph / LLM ---
    "deepagents>=0.4.0",
    "langgraph>=1.0.8",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=1.2.10",
    "langchain-community>=0.3.0",
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # --- Redis ---
    "redis>=5.0.0",
    # --- Vector Store ---
    "chromadb>=0.4.24",
    # --- Auth & Security ---
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    # --- Storage ---
    "boto3>=1.34.0",
    # --- Data Validation ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # --- Utilities ---
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict = true
